Add my original blog posts

--- a/content/posts/post-0022.md
+++ b/content/posts/post-0022.md
@@ -2,15 +2,18 @@
 layout: post
 title: "Socket Protocols"
 date: 2016-05-29T21:13:39-07:00
+author: Loki Astari (C)2016
 comments: true
-categories: [C++, Sockets, C++-By-Example, Coding]
+categories: ["C++", "Sockets", "C++-By-Example", "Coding"]
 series: Sockets
 tags: Sockets
 sharing: true
 footer: true
 subtitle: So you want to learn C++
-author: Loki Astari (C)2016
 description: A very cursory look at protocols and why they are needed
+image: /images/post/post-1.png
+featured: true
+draft: false
 ---
 
 In the previous articles I have used a very simplistic protocol. In real world situations this simple protocol is not sufficient. To provide a more robust connection between client and server a communications protocol is required so that we can validate messages are sent correctly and generate appropriate responses that can also be validated.
