--- a/content/posts/post-0017.md
+++ b/content/posts/post-0017.md
@@ -39,7 +39,7 @@ It is worth specifying the internal types defined here. As this allows you to ab
 
 In C++11 the `std::initializer_list<T>` was introduced. This allows a better list initialization syntax to be used with user defined types. Since this is usually defined in terms of the range based construction we should probably add both of these constructors.
 
-* Vector(std::initializer&#95;list<T> const& list)
+* Vector(std::initializer&#95;list&lt;T&gt; const& list)
 * Vector(I begin, I end)
 
 #### Iterators
