--- a/content/posts/post-0019.md
+++ b/content/posts/post-0019.md
@@ -22,7 +22,7 @@ I am writing a series of articles that start with a basic C++ client/server appl
 
 Currently the plan is to write the following articles:
 
-<!-- Server listening for program sockets -->
+{/* Server listening for program sockets */}
 * Client/Server C
 * Client/Server C Read/Write
 * Client/Server C++ Wrapper
