--- a/content/posts/post-0018.md
+++ b/content/posts/post-0018.md
@@ -14,7 +14,7 @@ featured: true
 draft: false
 ---
 
-So I never really considered why the resize of vector used a constant expansion of 1.5 or 2 (in some popular implementations). That was until I did my previous article Xseries ["Vector"](<%- config.site %>/blog/2016/02/27/vector/) where I concentrated a lot on resource management and did a section on [resizing the vector](<%- config.site %>/blog/2016/03/12/vector-resize/). Originally in the code I tried to be clever, a mistake. I used a resize value of 1.62 (an approximation of `Phi`), because I vaguely remembered reading an article that this was the optimum resize factor. When I put this out for code review it was pointed out to me that this value was too large, the optimum value must be less than or equal to `Phi` (1.6180339887) and that exceeding this limit actually made things a lot worse.
+So I never really considered why the resize of vector used a constant expansion of 1.5 or 2 (in some popular implementations). That was until I did my previous article Xseries ["Vector"]({{config.site}}/blog/2016/02/27/vector/) where I concentrated a lot on resource management and did a section on [resizing the vector]({{config.site}}/blog/2016/03/12/vector-resize/). Originally in the code I tried to be clever, a mistake. I used a resize value of 1.62 (an approximation of `Phi`), because I vaguely remembered reading an article that this was the optimum resize factor. When I put this out for code review it was pointed out to me that this value was too large, the optimum value must be less than or equal to `Phi` (1.6180339887) and that exceeding this limit actually made things a lot worse.
 
 So I had to know why....
 
@@ -25,6 +25,7 @@ So the theory goes: You have a memory resource of size `B`. If you resize this r
 So I thought lets try that:
 Test one `r > Phi`:
 
+```
     B=10
     r=2.0
 
@@ -35,10 +36,12 @@ Test one `r > Phi`:
     Resize 2        30            40              80                 50
     Resize 3        70            80             160                 90
     Resize 4       150           160             320                170
+```
 
 OK. That seems to be holding (at least in the short term). Lo lets try a smaller value.
 Test two `r < Phi`:
 
+```
     B=10
     r=1.5
 
@@ -49,58 +52,71 @@ Test two `r < Phi`:
     Resize 2        25            22              33                  8
     Resize 3        47            33              48                  1
     Resize 4        80            48              72                 -8 // Reuse released memory next iteration
+```
 
 OK. That also seems to be holding. But can we show that holds for all values of B? Also this is a bit anecdotal can we actually show this relationship actually hold? Time to break out some maths (not math as my American cousins seem to insist on for the shortening of mathematics).
 
 
 So the size `S` of any block after `n` resize operations will be:
 
+```
 $$ S   = Br^n $$
+```
 
 Thus the size of `Released Memory` can be expressed as:
 
-$$ \sum_{k=0}^{n-1}\ Br^k $$
+```
+$$ \sum_&#123;k=0&#125;^&#123;n-1&#125;\ Br^k $$
+```
 
 Also the size of the next block will be:
 
-$$ Br^{n+1} $$
+```
+$$ Br^&#123;n+1&#125; $$
+```
 
 So if the amount of `Released Memory` >= the amount required for the next block, then we can reuse the `Released Memory`.
 
-$$ \sum_{k=0}^{n-1}\ Br^k &gt;= Br^{n+1} $$
+```
+$$ \sum_&#123;k=0&#125;^&#123;n-1&#125;\ Br^k &gt;= Br^&#123;n+1&#125; $$
 
-$$ B \sum_{k=0}^{n-1}\ r^k &gt;= Br^{n+1} $$
+$$ B \sum_&#123;k=0&#125;^&#123;n-1&#125;\ r^k &gt;= Br^&#123;n+1&#125; $$
 
-$$ \sum_{k=0}^{n-1}\ r^k &gt;= r^{n+1} $$
+$$ \sum_&#123;k=0&#125;^&#123;n-1&#125;\ r^k &gt;= r^&#123;n+1&#125; $$
 
-$$ {1-r^{(n-1)+1}\over1-r} &gt;= r^{n+1} $$
+$$ &#123;1-r^&#123;(n-1)+1&#125;\over1-r&#125; &gt;= r^&#123;n+1&#125; $$
 
-$$ {1-r^n\over1-r} &gt;= r^{n+1} $$
+$$ &#123;1-r^n\over1-r&#125; &gt;= r^&#123;n+1&#125; $$
 
-$$ 1-r^n &gt;= r^{n+1} (1-r) $$
+$$ 1-r^n &gt;= r^&#123;n+1&#125; (1-r) $$
 
-$$ 1-r^n &gt;= r^{n+1} - r^{n+2} $$
+$$ 1-r^n &gt;= r^&#123;n+1&#125; - r^&#123;n+2&#125; $$
 
-$$ 1 + r^{n+2} - r^{n+1} - r^n &gt;= 0 $$
+$$ 1 + r^&#123;n+2&#125; - r^&#123;n+1&#125; - r^n &gt;= 0 $$
 
 $$ 1 + r^n (r^2 - r - 1) &gt;= 0 $$
+```
 
-This is were my maths broke down and I had to plot some graphs (my old "maths" teacher would have been so proud).<br>
+This is were my maths broke down and I had to plot some graphs (my old "maths" teacher would have been so proud).<br/>
 
 
-{% img /images/Root4.png 400 200 "n=4"%}
-{% img /images/Root8.png 400 200 "n=8"%}
-<br><br>
+<img src='/images/Root4.png' style={{width:400, height:200, n:4}}/>
+<img src='/images/Root8.png' style={{width:400, height:200, n:8}}/>
+<br/><br/>
 
 So after looking at the graphs (to understand the formula) then talking to some smart people.
 They noticed that:
 
-$$ \sqrt{(r^2 - r - 1)} . when . r = \Phi $$
+```
+$$ \sqrt&#123;(r^2 - r - 1)&#125; . when . r = \Phi $$
+```
 
 
 We find that the first root of the equation is 1. The second root of the equation depends on `n`, as `n` tends to `infinity` the other root tends towards `Phi`. From this we can infer the following:
 
-$$ 1 < r <= \Phi $$
+```
+$$ 1 < r < = \Phi $$
+```
 
 Thus if `r` remains in the above range then the above theory holds.
 
